--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,9 +3,11 @@
 - name: "include variable overrides"
   include_vars: "{{ item }}"
   with_first_found:
-    - "vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-    - "vars/{{ ansible_distrubition }}.yml"
-    - "vars/{{ ansible_os_family }}.yml"
+    - files:
+      - "vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+      - "vars/{{ ansible_distrubition }}.yml"
+      - "vars/{{ ansible_os_family }}.yml"
+      skip: true
   tags:
     - devtools
 
