--- a/playbook.yml
+++ b/playbook.yml
@@ -10,9 +10,11 @@
         - skip_ansible_lint
     - name: "installing testing packages"
       package:
-        name: which,wget
+        name:
+          - which
+          - wget
         state: installed
-      when: ansible_os_family != 'Debian'
+      when: ansible_os_family == 'RedHat'
     - name: "installing testing packages"
       package:
         name: wget
