--- a/molecule.yml
+++ b/molecule.yml
@@ -21,7 +21,7 @@ docker:
       ansible_groups:
         - test
     - name: ansible-devtools-arch
-      image: pritunl/archlinux
+      image: base/archlinux
       image_version: latest
       dockerfile: docker/arch.dockerfile
       command: /bin/bash
