Add support for molecule 2.0

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,17 +1,15 @@
 ---
-# Include variable definitions
-- name: "include variable overrides"
+- name: include variable overrides
   include_vars: "{{ item }}"
   with_first_found:
     - files:
-      - "vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-      - "vars/{{ ansible_distrubition }}.yml"
-      - "vars/{{ ansible_os_family }}.yml"
+        - "vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+        - "vars/{{ ansible_distrubition }}.yml"
+        - "vars/{{ ansible_os_family }}.yml"
       skip: true
   tags:
     - devtools
 
-# Install packages
 - name: install devtools packages
   package:
     name: "{{ devtools_packages }}"
