Fix variable overrides

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,3 @@
 ---
-devtools_packages:
-  - build-essential
-devtools_packages_state: present
+#devtools_packages: []
+#devtools_packages_state: present
