--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,16 +10,16 @@
 
 - name: install apt packages
   apt:
-    name: "{{ devtools_packages }}"
-    state: "{{ devtools_packages_state }}"
+    name: "{{ devtools_packages | default('devtools_packages_default') }}"
+    state: "{{ devtools_packages_state | default('present') }}"
     update_cache: yes
   become: yes
   when: ansible_os_family == 'Debian'
 
 - name: install yum packages
   yum:
-    name: "{{ devtools_packages }}"
-    state: "{{ devtools_packages_state }}"
+    name: "{{ devtools_packages | default('devtools_packages_default') }}"
+    state: "{{ devtools_packages_state | default('present') }}"
     update_cache: yes
   become: yes
   when: ansible_os_family == 'RedHat'
@@ -27,9 +27,9 @@
 - name: install pacman packages
   pacman:
     name: "{{ item }}"
-    state: "{{ devtools_packages_state }}"
+    state: "{{ devtools_packages_state | default('present') }}"
     update_cache: yes
   become: yes
   with_items:
-    - "{{ devtools_packages }}"
+    - "{{ devtools_packages | default('devtools_packages_default') }}"
   when: ansible_os_family == 'Archlinux'
