--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,10 +26,8 @@
 
 - name: install pacman packages
   pacman:
-    name: "{{ item }}"
+    name: "{{ devtools_packages | default(devtools_packages_default) }}"
     state: "{{ devtools_packages_state | default('present') }}"
     update_cache: yes
   become: yes
-  with_items:
-    - "{{ devtools_packages | default(devtools_packages_default) }}"
   when: ansible_os_family == 'Archlinux'
