--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,21 +3,19 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint: |
-  set -e
-  yamllint .
-  ansible-lint .
 platforms:
-  - name: centos
-    image: centos:7
-  - name: debian
-    image: debian:stretch
-  - name: ubuntu
-    image: ubuntu:xenial
-  - name: arch
-    image: archlinux/base:latest
+  - name: instance
+    image: "${MOLECULE_DOCKER_IMAGE}"
+    command: ${MOLECULE_DOCKER_COMMAND:-""}
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    privileged: true
+    pre_build_image: true
 provisioner:
   name: ansible
+  log: true
+  playbooks:
+    converge: ${MOLECULE_PLAYBOOK:-converge.yml}
 scenario:
   name: default
 verifier:
