--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,26 +1,26 @@
 ---
 galaxy_info:
+  standalone: true
   author: nephelaiio
   role_name: devtools
   description: An Ansible role to install and configure base development tools
   license: MIT
-  min_ansible_version: 2.2
+  min_ansible_version: '2.2'
   platforms:
     - name: EL
       versions:
-        - 7
+        - all
     - name: Archlinux
       versions:
         - all
     - name: Ubuntu
       versions:
-        - xenial
+        - all
     - name: Debian
       versions:
-        - stretch
+        - all
   galaxy_tags:
     - devtools
 
 dependencies:
   - role: nephelaiio.git
-    version: 2.1.0
