--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,11 +1,11 @@
 ---
 - name: Converge
   hosts: all
-  pre_tasks:
-    - name: update apt package cache
-      apt:
-        update_cache: yes
-      when: (ansible_os_family | lower) == 'debian'
-      changed_when: false
   roles:
     - role: nephelaiio.devtools
+  pre_tasks:
+    - name: update apt package cache
+      ansible.builtin.apt:
+        update_cache: yes
+      when: ansible_os_family == 'Debian'
+      changed_when: false
