--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,22 +1,24 @@
 ---
 dependency:
   name: galaxy
+  options:
+    role-file: requirements.yml
+    requirements-file: requirements.yml
 driver:
   name: docker
 platforms:
   - name: instance
     image: "${MOLECULE_DOCKER_IMAGE}"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    cgroupns_mode: host
     privileged: true
     pre_build_image: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    tmpfs:
+      - /tmp
+      - /opt
 provisioner:
   name: ansible
-  log: true
-  playbooks:
-    converge: ${MOLECULE_PLAYBOOK:-converge.yml}
-scenario:
-  name: default
 verifier:
-  name: testinfra
+  name: ansible
