--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,7 +26,7 @@
   tags: skip_ansible_lint
 
 - name: Install pacman packages
-  community.general.packaging.os.pacman:
+  community.general.pacman:
     name: "{{ devtools_packages | default(devtools_packages_default) }}"
     state: "{{ devtools_packages_state | default('present') }}"
     update_cache: true
