--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,13 +8,13 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: "${MOLECULE_DOCKER_IMAGE}"
-    command: ${MOLECULE_DOCKER_COMMAND:-""}
-    cgroupns_mode: host
-    privileged: true
+    image: geerlingguy/docker-${MOLECULE_DOCKER_IMAGE:-ubuntu2204}-ansible
     pre_build_image: true
+    command: ${MOLECULE_DOCKER_COMMAND:-"/lib/systemd/systemd"}
+    cgroupns_mode: host
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    privileged: true
     tmpfs:
       - /tmp
       - /opt
