--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,32 +2,28 @@
 name: lint
 
 on:
-
   pull_request:
     branches:
       - master
 
 defaults:
-
   run:
-    working-directory: 'nephelaiio.devtools'
+    working-directory: "nephelaiio.devtools"
 
 jobs:
-
   lint:
-
     name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v4
         with:
-          path: 'nephelaiio.devtools'
+          path: "nephelaiio.devtools"
 
       - name: Set up python 3
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Update ubuntu repositories
         run: sudo apt-get update
