--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,26 +12,23 @@ on:
       - "*"
 
 defaults:
-
   run:
-    working-directory: 'nephelaiio.devtools'
+    working-directory: "nephelaiio.devtools"
 
 jobs:
-
   release:
-
     name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
         with:
-          path: 'nephelaiio.devtools'
+          path: "nephelaiio.devtools"
 
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Update ubuntu repositories
         run: sudo apt-get update
