--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,22 +4,21 @@ galaxy_info:
   author: nephelaiio
   description: An Ansible role to install and configure base development tools
   license: MIT
-  min_ansible_version: '2.2'
+  min_ansible_version: "2.2"
   platforms:
     - name: EL
       versions:
-        - 'all'
+        - "all"
     - name: ArchLinux
       versions:
-        - 'all'
+        - "all"
     - name: Ubuntu
       versions:
-        - 'all'
+        - "all"
     - name: Debian
       versions:
-        - 'all'
+        - "all"
   galaxy_tags:
     - devtools
 
-dependencies:
-  - role: nephelaiio.git
+dependencies: []
