--- a/vars/Debian-11.yml
+++ b/vars/Debian-11.yml
@@ -4,6 +4,6 @@ devtools_packages_default:
   - build-essential
   - m4
   - libffi-dev
-  - python3-dev
+  - python-dev
   - libssl-dev
 devtools_packages_state: present
